@@ -1,3 +1,7 @@
+1999-07-09  Thomas Bushnell, BSG  <tb@mit.edu>
+
+	* utmp.c (return_data): Use mmap instead of vm_allocate.
+
 Mon Aug 21 16:35:34 1995  Miles Bader  <miles@churchy.gnu.ai.mit.edu>
 
 	* utmp.c (trivfs_goaway, trivfs_modify_stat): Update arguments.
